--- a/index.html
+++ b/index.html
@@ -115,12 +115,13 @@
         <br>Little Wiam and Wissal would be so proud and happy to see us like this!</p>
       <div class="timeline">
         <figure class="event"><figcaption>We go Disney, think calm… but no! We scream, we run, we eat too much candy... Classic us</figcaption><img src="images/photo1.PNG" alt="First trip"></figure>
-        <figure class="event"><figcaption>Under the Spanish sun ☀️</figcaption><img src="images/photo2.PNG" alt="Spain"></figure>
+        <figure class="event"><figcaption>Duomo of Milan – Look up! 🏛️</figcaption><img src="images/photo2.PNG" alt="Spain"></figure>
         <figure class="event"><figcaption>Walked around pretending to shop, secretly eating gelato, taking weird mirror selfies… ✨</figcaption><img src="images/photo3.PNG" alt="Milan"></figure>
         <figure class="event"><figcaption>Under the Spanish sun ☀️</figcaption><img src="images/photo4.PNG" alt="Adventure"></figure>
         <figure class="event"><figcaption>Every road is better with you</figcaption><img src="images/photo5.PNG" alt="Road trip"></figure>
         <figure class="event"><figcaption>Every road is better with you</figcaption><img src="images/photo6.PNG" alt="Road trip"></figure>
-        <figure class="event"><figcaption>Every road is better with you</figcaption><img src="images/photo7.PNG" alt="Road trip"></figure>
+        <figure class="event"><figcaption>Moulin Rouge – Tourist mode activated 🌹</figcaption><img src="images/photo7.PNG" alt="Road trip"></figure>
+        <figure class="event"><figcaption>Como lake : Lost in the beauty, found in laughter 🌊😎</figcaption><img src="images/photo8.PNG" alt="Adventure"></figure>
       </div>
       <div style="display:grid;place-items:center;margin-top:10px"><button onclick="showPage(4)">A Little Game… 🎮</button></div>
     </section>
