--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <h1>🎁 Your Gift 🎁</h1>
       <p style="font-weight:800">My gift to you: 🪂 A SKYDIVING ADVENTURE together — whenever you want!</p>
       <figure class="event"><figcaption>Us fainting while SKYDIVING</figcaption><img src="images/skydiving.jpeg" alt="SKYDIVING"></figure>
-      <div style="display:grid;place-items:center;margin-top:10px">I can’t wait to fly with you above the world and of course faint together🌍💙</div>
+      <div style="display:grid;place-items:center;margin-top:10px">I can’t wait to fly with you above the world together🌍💙</div>
     </section>
   </div>
 
