--- a/index.html
+++ b/index.html
@@ -132,17 +132,17 @@ button:active{transform:translateY(1px)}
   <button onclick="quizAnswer('wrong')">Paris</button>
   <button onclick="quizAnswer('correct')">Barcelona</button>
   <p id="quizFeedback" style="margin-top:10px;font-weight:bold;"></p>
-  <div style="display:grid;place-items:center;margin-top:10px"><button onclick="showPage(4)">See Our Story 📸</button></div>
+  <div style="display:grid;place-items:center;margin-top:10px"><button onclick="showPage(4)">See some of our adventures 📸</button></div>
 </section>
 <!-- PAGE 4: Timeline -->
 <section id="page4" class="panel page hidden">
   <h1>🌸 Our Journey Together 🌸</h1>
-  <p>Every photo is a little chapter of our story.</p> 
-  <p>From Paris to Milan, to our late-night swim in Barcelona… there’s no one I’d rather share so many memories and laughs with than you.
+  <p>Every photo is a little chapter of our Journey.</p> 
+  <p>From Paris to Milan, to our late-night swims in Barcelona, no matter where we go or what we do, there’s no one I’d rather have as my partner in fun, memories, and mischief than you.
     <br>Thank you for being part of every chapter of my life and always having my back. 
     <br>Little Wiam and Wissal would be so proud and happy to see us like this!</p>
   <div class="timeline">
-    <figure class="event"><figcaption>We go Disney, think calm… but no! We scream, we run, we eat too much candy... Classic us</figcaption><img src="images/photo1.PNG" alt="First trip"></figure>
+    <figure class="event"><figcaption>We go to Disney, think calm… but no! We scream, we run, we eat too much candy... Classic us</figcaption><img src="images/photo1.PNG" alt="First trip"></figure>
     <figure class="event"><figcaption>Duomo of Milan – Look up! 🏛️</figcaption><img src="images/photo2.PNG" alt="Spain"></figure>
     <figure class="event"><figcaption>Walked around pretending to shop, secretly eating gelato, taking weird mirror selfies… ✨</figcaption><img src="images/photo3.PNG" alt="Milan"></figure>
     <figure class="event"><figcaption>Under the Spanish sun ☀️</figcaption><img src="images/photo4.PNG" alt="Adventure"></figure>
