--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ button:active{transform:translateY(1px)}
       <div class="heart"></div>
       <div id="letter" class="letter">
         <h3>To my best friend Wissal 💖</h3>
-        <p>I’m so lucky to have you in my life. Today is all about celebrating you — your laughte and our memories.</p>
+        <p>I’m so lucky to have you in my life. Today is all about celebrating you — your laughter and our memories.</p>
         <p style="margin-top:8px">Ready for a little adventure?</p>
       </div>
     </div>
